--- a/ShopServer/package.json
+++ b/ShopServer/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonfile": "^6.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1"
   }
 }
