--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 ShopServer/configs/ 
 ShopServer/node_modules/ 
 ShopApp/node_modules/ 
-ShopServer/controllers/masterRouter.js 
-ShopServer/reposetories/masterREP.js 
-ShopServer/services/masterService.js 
+ShopServer/controllers/masterRouter
+ShopServer/reposetories/masterREP
+ShopServer/services/masterService
 
